# modal-find

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  modal-find-0.0.1.vsix  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
media/: modal.css  modal.js  modal.ts  tsconfig.json  webview.d.ts
native/fff-bridge/: Cargo.toml
native/fff-bridge/src/: app.rs  candidates.rs  helpers.rs  main.rs  protocol.rs  query.rs  ranking.rs
scripts/: build-native.mjs
src/: ModalFindPanel.ts  debug.ts  errors.ts  extension.ts  fffProcess.ts  nativeBinary.ts  previewBuilder.ts  searchService.ts  searchSettingsCache.test.ts  searchSettingsCache.ts  webviewHtml.ts
